Сделал бургер меню

--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,106 +1,232 @@
 .page-header {
-  display: flex;
-  flex-direction: column;
-  background-color: $blue;
-  color: $white;
+  border: none;
+  width: 100%;
+  z-index: 1;
+  // position: absolute;
+  // background-color: $blue;
+}
 
-  @media (min-width: $tablet-width) {
-    background-color: $blue;
+@media (min-width: $desktop-width) {
+  .page-header {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    background-color: #00000044;
+    width: 100%;
+    box-sizing: border-box;
   }
 }
 
 .page-header__nav {
-  position: relative;
-  width: auto;
-  min-height: 51px;
-  background-color: $blue;
+  background-color: #00000044;
+  position: absolute;
+  width: 100%;
 }
 
-.page-header__menu {
-  display: flex;
-  justify-content: space-between;
-  width: 280px;
-  margin: 0 auto;
-
-  @media (min-width: $tablet-width) {
-    width: 620px;
+@media (min-width: $desktop-width) {
+  .page-header__nav {
+    width: auto;
+    display: flex;
   }
 }
 
 .page-header__logo {
-  height: 66px;
-  display: flex;
-  width: 74px;
+  margin: 0;
+  position: relative;
+  left: 20px;
   padding-top: 22px;
   padding-bottom: 22px;
-
-  @media (min-width: $tablet-width) {
-    height: 110px;
-    display: flex;
-    width: 145px;
-  }
-
-  @media (min-width: $tablet-width) {
-    width: 147px;
-  }
-}
-
-.page-header__logo img {
-  width: 74px;
-  height: 23px;
 }
 
 @media (min-width: $tablet-width) {
-  .page-header__logo img {
-    width: 145px;
-    height: 40px;
+  .page-header__logo {
+
+    position: relative;
+    left: 20px;
   }
 }
 
-.page-header__toggle {
-  position: relative;
-  top: 10px;
-  right: 22px;
-  z-index: 2;
-  display: block;
-  width: 50px;
-  height: 50px;
-  background-color: $blue;
-  cursor: pointer;
-  border: none;
+@media (min-width: $desktop-width) {
+  .page-header__logo {
+    position: relative;
+    padding-bottom: 44px;
+    padding-top: 44px;
+    padding-left: 130px;
+  }
 }
 
-.page-header__nav--closed .page-header__toggle {
-  background-color: #00000000;
-}
-
-.page-header__nav--closed {
-  position: absolute;
-  width: 100%;
-  background-color: #00000050;
-}
-
-.page-header__nav--closed .page-header__toggle::before {
-  content: "";
-  position: absolute;
-  top: 15px;
-  left: 17px;
-  width: 36px;
-  height: 2px;
-  background-color: $white;
-  box-shadow: 0 8px 0 0 $white, 0 16px 0 0 $white;
-}
-
-.page-header__nav--closed .page-header__toggle:active::before {
-  background-color: fade($white, 30%);
-  box-shadow:
-    0 8px 0 0 fade($white, 30%),
-    0 16px 0 0 fade($white, 30%);
-}
-
-@media (max-width: $mobile-width-only) {
-  .page-header__nav--closed .page-header__list-item {
+@media (min-width: $desktop-width) {
+  .page-header__toggle {
     display: none;
+  }
+}
+
+.page-header__nav-list {
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  background-color: $blue;
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__nav-list {
+    display: flex;
+    width: 940px;
+    min-height: 110px;
+    flex-direction: row;
+    justify-content: space-evenly;
+    text-transform: none;
+    background-color: #00000000;
+  }
+}
+
+.page-header__list-link {
+  text-decoration: none;
+  color: $white;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 32px;
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__list-link {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 18px;
+    text-transform: none;
+    box-shadow: none;
+    color: $white;
+    opacity: none;
+    position: relative;
+    border-style: none;
+    padding: 0;
+    align-self: center;
+  }
+}
+
+.page-header__list-menu {
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+  min-height: 66px;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  border-style: none;
+}
+
+@media (min-width: $tablet-width) {
+  .page-header__list-menu {
+    width: 620px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__list-menu {
+    display: flex;
+    width: 940px;
+    margin: 0 auto;
+    min-height: 110px;
+    flex-direction: row;
+    justify-content: space-between;
+    text-transform: none;
+  }
+}
+
+.page-header__list-item {
+  position: relative;
+  box-sizing: border-box;
+  padding-top: 16px;
+  padding-bottom: 15px;
+  border-top: 1px solid #485461;
+  border-bottom: 1px solid $black;
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__list-item {
+    display: flex;
+    border-style: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__list-link {
+    margin-left: 79px;
+  }
+}
+
+// Бургер меню
+.page-header__menu {
+  display: flex;
+  justify-content: space-between;
+  box-sizing: border-box;
+  min-height: 66px;
+  width: 280px;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  border-style: none;
+}
+
+@media (min-width: $tablet-width) {
+  .page-header__menu {
+    width: 620px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__menu {
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: $desktop-width) {
+  .page-header__nav--closed .page-header__toggle {
+    background-image: url("..//img/openmenubtn.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #00000000;
+    width: 30px;
+    height: 30px;
+    display: block;
+    font-size: 0;
+    border: none;
+    z-index: 9999;
+  }
+}
+
+@media (max-width: $desktop-width) {
+  .page-header__nav--opened .page-header__toggle {
+    background-image: url("..//img/closemenubtn.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #00000000;
+    width: 30px;
+    height: 30px;
+    display: block;
+    font-size: 0;
+    border: none;
+    z-index: 9999;
+  }
+}
+
+@media (max-width: $desktop-width) {
+  .page-header__nav--opened .page-header__list-item {
+    display: block;
   }
 }
 
@@ -110,59 +236,132 @@
   }
 }
 
-.page-header__nav--opened .page-header__toggle {
-  position: relative;
-  top: 10px;
-  right: 22px;
-  display: block;
-  width: 50px;
-  height: 50px;
-  background-color: #00000000;
-  cursor: pointer;
-  border: none;
-
-  &::before,
-  &::after {
-    content: "";
+@media (max-width: $mobile-width-only) {
+  .page-header__nav--opened .page-header__nav-wrapper {
+    width: 100%;
+    z-index: 1;
     position: absolute;
-    top: 11px;
-    right: 22px;
-    left: 40px;
-    width: 3px;
-    height: 29px;
-    background-color: #ffffff;
   }
+}
 
-  &::before {
-    transform: rotate(45deg);
-    box-shadow: none;
+@media (min-width: $tablet-width) {
+  .page-header__nav--opened .page-header__nav-wrapper {
+    width: 100%;
+    z-index: 1;
+    position: absolute;
   }
+}
 
-  &::after {
-    transform: rotate(-45deg);
+// Цвет шапки меню
+@media (min-width: $tablet-width) {
+  .page-header .page-header__nav--opened {
+    background-color: $blue;
   }
+}
 
-  &:active::before,
-  &:active::after {
-    background-color: fade($white, 30%);
+@media (min-width: $desktop-width) {
+  .page-header .page-header__nav--opened {
+    background-color: #00000000;
   }
+}
+
+@media (min-width: $tablet-width) {
+  .page-header .page-header__nav--closed {
+    background-color: #0000005b;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header .page-header__nav--closed {
+    background-color: #00000000;
+  }
+}
+
+// @media (max-width: $tablet-width) {
+//   .page-header .page-header__nav--closed  {
+//     background-color: #00000057;
+//   }
+// }
+
+// .page-header__nav--opened  {
+//     background-color: $blue;
+//   }
+
+// @media (max-width: $tablet-width) {
+//   .page-header .page-header__nav--opened  {
+//     background-color: $blue;
+//   }
+// }
+//
+
+@media (min-width: $desktop-width) {
+  .page-header__nav--opened .page-header__nav-wrapper {
+    display: block;
+    position: relative;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__nav--closed .page-header__list-item {
+    display: flex;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__nav--closed .page-header__toggle {
+    display: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__nav--opened .page-header__toggle {
+    display: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__nav--opened .page-header__nav-list {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.page-header__nav--opened {
+  background-color: $blue;
 }
 
 .page-header__nav--nojs .page-header__menu {
   background-color: $blue;
+  width: inherit;
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__nav--nojs .page-header__menu {
+    background-color: #28364500;
+    width: inherit;
+  }
 }
 
 .page-header__nav--nojs .page-header__toggle {
   display: none;
 }
 
-@media (max-width: $desktop-width) {
-  .page-header__nav--nojs .page-header__nav-wrapper {
-    display: block;
+.page-header__nav--nojs {
+  display: block;
+  position: static;
+}
+
+@media (min-width: $desktop-width) {
+  .page-header__nav--nojs {
+    display: flex;
     position: static;
     min-height: 0;
   }
 }
+
+// .page-header .page-header__nav-wrapper {
+//   position: absolute;
+// }
 
 .page-header__nav--nojs .page-header__list-item {
   display: block;
@@ -172,48 +371,10 @@
   text-align: center;
 }
 
-.page-header__nav-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-
-  @media (min-width: $tablet-width) {
-    width: inherit;
-  }
-}
-
-.page-header__nav-list a {
-  color: $white;
-}
-
-.site-list a {
-  position: relative;
-  display: block;
-  padding: 12px 21px;
-  padding-bottom: 13px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 32px;
-  color: $white;
-  text-transform: uppercase;
-  text-decoration: none;
-  background-color: $blue;
-  border-top: 1px solid #485461;
-  border-bottom: 1px solid $black;
-  text-align: center;
-}
-
 @media (min-width: $desktop-width) {
-  .page-header__toggle {
-    display: none;
-  }
-}
-
-.page-header__nav-wrapper {
-  @media (min-width: $tablet-width) {
+  .page-header__nav--nojs .page-header__nav-list {
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: 0 auto;
+    flex-direction: row;
+    align-items: center;
   }
 }
