--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,6 +1,7 @@
 // common
 @import "common/variables.scss";
 @import "common/visually-hidden.scss";
+@import "common/mixins.scss";
 
 // blocks
 @import "blocks/page.scss";
