--- a/source/sass/blocks/galery.scss
+++ b/source/sass/blocks/galery.scss
@@ -1,5 +1,5 @@
 .galery__title {
-  background-image: url("..//img/backtablet.jpg");
+  background-image: url("..//img/background.jpg");
   font-weight: 300;
   font-size: 24px;
   line-height: 33px;
@@ -14,6 +14,10 @@
   background-size: cover;
   margin: 0 auto;
   text-align: center;
+
+  @media (min-resolution: $retina) {
+    background-image: url("..//img/background@2x.jpg");
+  }
 }
 
 @media (min-width: $tablet-width) {
@@ -102,6 +106,13 @@
   .galery__img-wrap {
     width: 300px;
     height: 300px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .galery__img-wrap {
+    width: 300px;
+    height: 400px;
   }
 }
 
