--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -9,3 +9,89 @@
   margin: 0 auto;
   min-width: 320px;
 }
+
+.popup {
+  width: 320px;
+  background-color: $white;
+  box-shadow: 0 7 15 #0000002f;
+  margin: 0 auto;
+  display: none;
+}
+
+@media (min-width: $tablet-width) {
+  .popup {
+    width: 460px;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .popup {
+    width: 780px;
+    margin: 0 auto;
+  }
+}
+
+.popup-title {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
+}
+
+@media (min-width: $tablet-width) {
+  .popup-title {
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 40px;
+  }
+}
+
+.popup-subtitle {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  text-align: center;
+  width: 320px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: $tablet-width) {
+  .popup-subtitle {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+  }
+}
+
+.popup__button-thanks {
+  background-color: $gray;
+  width: 100%;
+}
+
+@media (min-width: $desktop-width) {
+  .popup__button-warning {
+    background-color: $gray;
+    width: 100%;
+  }
+}
+
+
+.popup-send {
+  background-color: #2aab6d;
+  color: #ffffff;
+  text-transform: uppercase;
+  border: none;
+  cursor: pointer;
+  width: 280px;
+  height: 63px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  border-radius: 2px;
+  text-align: center;
+  display: block;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
