--- a/source/sass/blocks/panorama.scss
+++ b/source/sass/blocks/panorama.scss
@@ -98,7 +98,7 @@
   text-transform: uppercase;
 }
 
-.panorama_link {
+.panorama__img-link {
   display: flex;
   flex-direction: row;
   justify-content: center;
